name:                advent-of-code2018
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Magnus Stavngaard
maintainer:          magnus@stavngaard.dk
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  build-depends:       base >=4.8,
                       classy-prelude ==1.3.1
  exposed-modules:     AdventOfCode
  hs-source-dirs:      lib
  ghc-options:         -Wall
  default-language:    Haskell2010

executable day-01-1
  main-is:             Main.hs
  build-depends:       base >=4.8,
                       advent-of-code2018,
                       parsec ==3.1.13.0,
                       parsec3-numbers ==0.1.0,
                       classy-prelude ==1.3.1
  hs-source-dirs:      day-01/assignment-1/
  ghc-options:         -Wall
  default-language:    Haskell2010

executable day-01-2
  main-is:             Main.hs
  build-depends:       base >=4.8,
                       advent-of-code2018,
                       parsec ==3.1.13.0,
                       parsec3-numbers ==0.1.0,
                       containers ==0.5.6.2,
                       classy-prelude ==1.3.1
  hs-source-dirs:      day-01/assignment-2/
  ghc-options:         -Wall
  default-language:    Haskell2010

executable day-02-1
  main-is:             Main.hs
  build-depends:       base >=4.8,
                       advent-of-code2018,
                       classy-prelude ==1.3.1
  hs-source-dirs:      day-02/assignment-1/
  ghc-options:         -Wall
  default-language:    Haskell2010

executable day-02-2
  main-is:             Main.hs
  build-depends:       base >=4.8,
                       advent-of-code2018,
                       classy-prelude ==1.3.1
  hs-source-dirs:      day-02/assignment-2/
  ghc-options:         -Wall
  default-language:    Haskell2010

executable day-03-1
  main-is:             Main.hs
  build-depends:       base >=4.8,
                       advent-of-code2018,
                       parsec ==3.1.13.0,
                       parsec3-numbers ==0.1.0,
                       classy-prelude ==1.3.1
  hs-source-dirs:      day-03/assignment-1/
  ghc-options:         -Wall
  default-language:    Haskell2010

executable day-03-2
  main-is:             Main.hs
  build-depends:       base >=4.8,
                       advent-of-code2018,
                       parsec ==3.1.13.0,
                       parsec3-numbers ==0.1.0,
                       containers ==0.5.6.2,
                       classy-prelude ==1.3.1
  hs-source-dirs:      day-03/assignment-2/
  ghc-options:         -Wall
  default-language:    Haskell2010

executable day-04-1
  main-is:             Main.hs
  build-depends:       base >=4.8,
                       advent-of-code2018,
                       parsec ==3.1.13.0,
                       parsec3-numbers ==0.1.0,
                       containers ==0.5.6.2,
                       classy-prelude ==1.3.1
  hs-source-dirs:      day-04/assignment-1/
  ghc-options:         -Wall
  default-language:    Haskell2010

executable day-04-2
  main-is:             Main.hs
  build-depends:       base >=4.8,
                       advent-of-code2018,
                       parsec ==3.1.13.0,
                       parsec3-numbers ==0.1.0,
                       containers ==0.5.6.2,
                       classy-prelude ==1.3.1
  hs-source-dirs:      day-04/assignment-2/
  ghc-options:         -Wall
  default-language:    Haskell2010
